STIJ-393: Fix wrong padding on filter labels in filter/sidebar layout

--- a/source/sass/41-organisms/filter/_filter.scss
+++ b/source/sass/41-organisms/filter/_filter.scss
@@ -39,15 +39,3 @@
     display: none;
   }
 }
-
-// Todo: fix in styleguide https://district09.atlassian.net/browse/STIJ-393
-.sidebar.filter-section {
-  form,
-  form .modal-content {
-    > fieldset {
-      > legend {
-        padding: 0;
-      }
-    }
-  }
-}
